...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

...
                    android:layout_weight="0.3"
                    android:gravity="center_vertical|end"
                    android:hint="@string/_dollar_sign"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/productPriceEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/transparent"
...
                    android:gravity="center"
                    android:text="@string/shipping"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Switch
                    android:id="@+id/shippingSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="false"
                    android:clickable="true"
                    android:enabled="true"
...
                    android:gravity="center"
                    android:text="@string/billing"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Switch
                    android:id="@+id/billingSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="false"
                    android:clickable="true"
                    android:enabled="true"
...
            android:enabled="true"
            android:focusable="true"
            android:text="@string/activate_3DS"
            android:textSize="14sp" />

        <ZoomButton
            android:id="@+id/merchantAppSubmitButton"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="0.11"
            android:adjustViewBounds="true"
...
