...
    <string name="city">City</string>
    <string name="continueShopping">Continue</string>
    <string name="shipping_information">Shipping information</string>
    <string name="invalid_card_number">Invalid Card Number</string>
    <string name="coupon_questionmark" translatable="false">Coupon?</string>
    <string name="done">Done</string>
    <string name="shipping">Shipping</string>
    <string name="submit">Submit</string>
    <string name="billing">Billing</string>
    <string name="payment">Payment</string>
    <string name="payment_type">Payment Type</string>
    <string name="shipping_Info">Shipping Info</string>
    <string name="pay">Pay</string>
    <string name="total">Total</string>
    <string name="buynowbutton" translatable="false">BuyNowbutton</string>
    <string name="desc" translatable="false">View Description</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
...
    <string name="TRANSACTION_FAILED">Transaction Failed</string>
    <string name="nameField">Name</string>

    <!-- Hints-->
    <string name="name_hint">John Doe</string>
    <string name="cc_hint" translatable="false">1234 5678 9012 3456</string>
    <string name="cvv_hint" translatable="false">123</string>
    <string name="email_hint" translatable="false">JohnDoe@Email.com</string>
    <string name="street_hint">Street</string>
    <string name="postal_code_hint">Postal Code</string>
    <string name="mm_yy">MM/YY</string>
    <string name="coupon" translatable="false"> Coupon</string>
    <string name="merchant">Merchant</string>
...
